# interrogation-pipeline

./: .gitignore  BUILD_PLAN_FOR_AYUSH.html  BUILD_PLAN_FOR_AYUSH.md  CLAUDE_PROMPT.md  Makefile  ONBOARDING.html  ONBOARDING.md  README.md  install.ps1  install.sh  start.bat  start.command
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/interrogation_pipeline/: __init__.py  __main__.py  bootstrap.py
backend/interrogation_pipeline/api/: __init__.py  app.py  routers.py
backend/interrogation_pipeline/config/: __init__.py  runtime.py  settings.py
backend/interrogation_pipeline/dedup/: __init__.py  banned.py  fuzzy.py
backend/interrogation_pipeline/discovery/: __init__.py  rss.py
backend/interrogation_pipeline/prompts/: __init__.py  scan.txt  verify.txt
backend/interrogation_pipeline/scan/: __init__.py  scanner.py  vtt.py
backend/interrogation_pipeline/scheduler/: __init__.py  runner.py  scheduler.py
backend/interrogation_pipeline/scrape/: __init__.py  cookies.py  errors.py  proxies.py  proxy_parser.py  ytdlp.py
backend/interrogation_pipeline/store/: __init__.py  db.py  models.py  repos.py
backend/interrogation_pipeline/trello/: __init__.py  card_format.py  client.py
backend/interrogation_pipeline/verify/: __init__.py  tavily.py  verifier.py
backend/tests/fixtures/: rss_midwestsafety_sample.xml  sample_clean.vtt
backend/tests/unit/: test_banned.py  test_dedup_fuzzy.py  test_discovery_overflow.py  test_discovery_rss.py  test_proxy_parser.py  test_scan_vtt.py  test_scrape_errors.py
docs/superpowers/specs/: 2026-05-10-interrogation-pipeline-design.md
frontend/: index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+17 files in other folders)
