[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interrogation-pipeline"
version = "0.1.0"
description = "Daily YouTube interrogation/bodycam case-mining pipeline with web dashboard"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Chaitanya"}]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "apscheduler>=3.10",
    "anthropic>=0.42",
    "tavily-python>=0.5",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.10",
    "feedparser>=6.0",
    "lxml>=5.3",
    "yt-dlp>=2026.5.5",
    "yt-dlp-ejs>=0.8.0",
    "sse-starlette>=2.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
interrogation-pipeline = "interrogation_pipeline.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["interrogation_pipeline*"]

[tool.setuptools.package-data]
"interrogation_pipeline" = ["prompts/*.txt", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "smoke: tests that hit real external services (skipped by default)",
]
addopts = "-m 'not smoke' --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
